5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1674_1100.log
== TEST (2019-04-25 11:39:48) 
-- CODE:
Tartura = 2
Garca = 5
Arara = 10
Mico-leao-dourado = 20
Onca = 50
Garoupa = 100

if(cedula==2):
	print("Entrada",cedula)
	print("animal",Tartaruga)
elif(cedula==5):
	print("Entrada",cedula)
	print("Entrada",Garca)
elif(cedula==10):
	print("Entrada",cedula)
	print("Entrada",arara)
elif(cedula==20):
	print("Entrada",cedula)
	print("Entrada",mico leao dourado)
elif(cedula==50):
	print("Entrada",cedula)
	print("Entrada",onca)
elif(cedula==100):
	print("Entrada",cedula)
	print("Entrada",garoupa)
-- ERROR:
File "XXXX", line 19
    print("Entrada",mico leao dourado)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:40:51) 
-- CODE:
Tartura = 2
Garca = 5
Arara = 10
Mico-leao-dourado = 20
Onca = 50
Garoupa = 100

if(cedula==2):
	print("Entrada",cedula)
	print("animal",Tartaruga)
elif(cedula==5):
	print("Entrada",cedula)
	print("Entrada",Garca)
elif(cedula==10):
	print("Entrada",cedula)
	print("Entrada",arara)
elif(cedula==20):
	print("Entrada",cedula)
	print("Entrada",micoleaodourado)
elif(cedula==50):
	print("Entrada",cedula)
	print("Entrada",onca)
elif(cedula==100):
	print("Entrada",cedula)
	print("Entrada",garoupa)
-- ERROR:
File "XXXX", line 4
    Mico-leao-dourado = 20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:44:04) 
-- CODE:
Tartura = 2
Garca = 5
Arara = 10
Mico-leao-dourado = 20
Onca = 50
Garoupa = 100

if(cedula==2):
	print("Entrada",cedula)
	print("Animal Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal micoleaodourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal garoupa")
-- ERROR:
File "XXXX", line 4
    Mico-leao-dourado = 20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:33) 
-- CODE:
Tartura = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if(cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(cedula==2):
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:49) 
-- CODE:
Tartura = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

elif(cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- ERROR:
File "XXXX", line 8
    elif(cedula==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:54) 
-- CODE:
Tartura = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (cedula==2):
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:31:47) 
-- CODE:
Tartura = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (cedula==2):
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:27) 
-- CODE:
cedula = int(input("valor do money:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:33:29) 
-- CODE:
cedula = int(input("valor do money:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- EXECUTION TIME:
0.13273
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:31) 
-- CODE:
cedula = int(input("valor do money:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:35:29) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:35:32) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- EXECUTION TIME:
0.219581
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:35:33) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula==2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:34) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:38:36) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- EXECUTION TIME:
0.180067
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:40:43) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:42:53) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:42:58) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:43:04) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:43:10) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:43:13) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:44:03) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "invalido")
-- EXECUTION TIME:
0.103969
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:44:08) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.217043
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
digite o valor da cedula:Entrada 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:44:11) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:44:22) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_Leao_Dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.185624
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:45:51) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:51:52) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:53:08) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca_pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:53:19) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca_pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.181348
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca_pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:53:34) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca_pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:54:56) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:54:57) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.134044
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:56:50) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.128244
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:57:14) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.186047
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:57:15) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:57:23) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.13502
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:58:12) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:58:58) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:" "Invalido")
-- EXECUTION TIME:
0.205586
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:59:50) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:02) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:00:05) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.153079
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:00:25) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.1974
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:01:57) 
-- CODE:
cedula = int(input("digite o valor da cedula:"))
Tartura = 2 
Garca = 5
Arara = 10
Micoleaodourado = 20
Oncapintada = 50
Garoupa = 100

if (cedula== 2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:", cedula)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.217376
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
